# markdown-inspector

./: .gitlab-ci.yml  Cargo.toml  README.md  deny.toml
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
